RESOLVED FIXED163008
[GTK] Fix build with GSTREAMER_GL enabled and ACCELERATED_2D_CANVAS disabled
https://bugs.webkit.org/show_bug.cgi?id=163008
Summary [GTK] Fix build with GSTREAMER_GL enabled and ACCELERATED_2D_CANVAS disabled
Miguel Gomez
Reported 2016-10-06 05:23:15 PDT
Build is broken because of some cairo-gl calls that are only available when ACCELERATED_2D_CANVAS is enabled
Attachments
Patch (3.18 KB, patch)
2016-10-06 05:30 PDT, Miguel Gomez
no flags
Miguel Gomez
Comment 1 2016-10-06 05:30:04 PDT
WebKit Commit Bot
Comment 2 2016-10-06 06:10:26 PDT
Comment on attachment 290815 [details] Patch Clearing flags on attachment: 290815 Committed r206863: <http://trac.webkit.org/changeset/206863>
WebKit Commit Bot
Comment 3 2016-10-06 06:10:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.