[GTK] Fix build with GSTREAMER_GL enabled and ACCELERATED_2D_CANVAS disabled https://bugs.webkit.org/show_bug.cgi?id=163008

Patch by Miguel Gomez <magomez@igalia.com> on 2016-10-06
Reviewed by Carlos Garcia Campos.

Put functions using cairo-gl behind appropriate guards.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::paintToCairoSurface): Deleted.
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:

Canonical link: https://commits.webkit.org/180916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206863 268f45cc-cd09-0410-ab3c-d52691b4dbfc